--- a/client/index.html
+++ b/client/index.html
@@ -69,5 +69,6 @@
 <!--Import jQuery before materialize.js-->
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script type="text/javascript" src="bower_components/materialize/dist/js/materialize.min.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
