--- a/client/index.html
+++ b/client/index.html
@@ -46,14 +46,14 @@
 			<form class="col s12">
 				<div class="row">
 					<div class="input-field col s12">
-				      <input placeholder="Placeholder" id="Nombres y Apellidos" type="text" class="validate">
+				      <input placeholder="Nombres y Apellidos" id="nombre" type="text" class="validate">
 				      <label for="first_name">Nombre y Apellidos</label>
 				    </div>
 				</div>
 			
 				<div class="row">
 					<div class="input-field col s12">
-				      <input placeholder="Placeholder" id="last_name" type="text" class="validate">
+				      <input placeholder="Edad" id="edad" type="text" class="validate">
 				      <label for="edad">Edad</label>
 				    </div> 
 				</div>
